

*lh-sources-3.9.0-r1 (07 May 2013)

  07 May 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.0-r1.ebuild:
  Bump to latest aufs release

  30 Apr 2013; Justin Lecher <jlec@gentoo.org>
  +files/lh-sources-3.9-armv6.patch:
  Add missing patch

  30 Apr 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.9.0.ebuild:
  Fix hacky naming of patches

*lh-sources-3.9.0 (30 Apr 2013)

  30 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.0.ebuild:
  Bump to new linux and aufs release

*lh-sources-3.8.10 (27 Apr 2013)

  27 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.10.ebuild:
  Bump to linux 3.8.10 and latest aufs3 release

*lh-sources-3.8.8 (18 Apr 2013)

  18 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.8.ebuild:
  Bump to latest genpatches

*lh-sources-3.8.7 (13 Apr 2013)

  13 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.7.ebuild:
  Bump to latest genpatches

*lh-sources-3.8.6 (06 Apr 2013)

  06 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.6.ebuild:
  Bump to latest genpatches release

*lh-sources-3.8.5-r1 (02 Apr 2013)

  02 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.5-r1.ebuild:
  Bump to new aufs3 release

*lh-sources-3.8.5 (30 Mar 2013)

  30 Mar 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.5.ebuild:
  Bump to genpatches 3.8-8 and latest aufs

*lh-sources-3.8.4 (21 Mar 2013)

  21 Mar 2013; Justin Lecher <jlec@gentoo.org> -lh-sources-3.8.3-r1.ebuild,
  +lh-sources-3.8.4.ebuild:
  Version BUmp

*lh-sources-3.8.3-r1 (18 Mar 2013)

  18 Mar 2013; Justin Lecher <jlec@gentoo.org> -lh-sources-3.8.2-r2.ebuild,
  -lh-sources-3.8.2-r3.ebuild, -lh-sources-3.8.3.ebuild,
  +lh-sources-3.8.3-r1.ebuild:
  Drop old; Revert memcg patches that prevent OOM with too many dirty pages
  which caused ZFS to flush dirty pages to deadlock, see bug #462066; in 3.6,
  3.7 and 3.8. Backported fixes from 3.8 to 3.7 that affect some of our Gentoo
  users.

*lh-sources-3.8.3 (16 Mar 2013)
