@@ -14,6 +14,7 @@ DIST README-3.8.6.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4ca
 DIST README-3.8.7.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST README-3.8.8.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST README-3.9.0.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
+DIST README-3.9.1.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST aufs-sources-3.8_p20130318.tar.xz 143300 SHA256 1573e49b0055ceb78d862ee656b25f10469c2219897a2de6689850289e723e80 SHA512 a63f43dc49ea9ae2092171590041bd052ace8755b7b8fa40c825a9478a5b9ad01158205c2eacb81bb2281a8973ff5d44adfd2874bf18b38d19f13120d8a266ad WHIRLPOOL bb540029d2541f9c0215350073ec7e307297ce9a90493e6bbeb106e7eb61e05df35334bd640eb5d34c935daa277ac84145a537e76d1aa3fb8eba2b916d5a461e
 DIST aufs-sources-3.8_p20130325.tar.xz 143352 SHA256 b278d941bcf3c2555ff15158982add3e8dd2216e575cae11bcb56b6e409c2aec SHA512 326cad5e90c5e32e603519c8a555fd08751cdcf67625ed419c1059e1cd967ae41461954b6433c05d5c0c0c83e206093b7f41fee05483bc013dd3158d418bc8cc WHIRLPOOL 471f7fc551e28cd44f9f3a1913426b0f6c7d383b7ec49faba1852fc23cc01aa94a92aacb604bb9d8a28bfc37890370cbbd013ba7a3755000fa3748b4cddb63e2
 DIST aufs-sources-3.8_p20130401.tar.xz 143368 SHA256 3ae9001450a44ae42eebfbbf542ebe977ae2c65f466eb2374bf203241829159d SHA512 46b8271a6042a13c76ee97f692a855c796545c89e2e41abb05288c605f965ee8bb2fbc2496e4e317ebedbf50623cddf9eb1596ffa53c1405db2a939bbbb072cd WHIRLPOOL ab833ea22d7fd00ca43c0332d7c528c1eba0d0fa3efbf3ba0e41fe72233627b3717a2ec1bc9d92629fb8060673afab14e894e6acd1355161d47d9736fd7b9389
@@ -38,6 +39,8 @@ DIST genpatches-3.8-9.base.tar.xz 208468 SHA256 52295de742ba0371afd041e09ba280e2
 DIST genpatches-3.8-9.extras.tar.xz 16568 SHA256 2ea61060a1525c4a8572af0b8258b222e84cc7fdc538b1b71b29784cea0dd424 SHA512 3601f4e2e5f428a18615a7b8f6c6ce00a8cc6476cb7a0d39665e66e2f49b89f091ec28ac01c6c1e288f68da1dedb23c64dec7bc1d93892e84350bdb83039fbc6 WHIRLPOOL 24d54663df1423f3110011d335d1128b55622daa306d70e6a010b42bb1859e5b479c8766f39e3a467096db6fcef08b37885f0d1d6e8fff2c58d5f31dfb593a4e
 DIST genpatches-3.9-1.base.tar.xz 6512 SHA256 a324a42c052693483b2c2c53d4e9a80488ce2edaa7d881e18ac48f4ef6d5caaa SHA512 f59ddabf39296f9559c06c855a436cba4033b1fc1a082c2df48c283632dbbefad3458c065735fe90d8c1220c47fbafa1a803f390b00668cc13e8bd981e126a55 WHIRLPOOL 73e7e3f3e292ac0dca88ccfbce2a12fd8dd7bde08a36ff0c799ac84abe246189041c6415d8e70211dc98ed5f6bacd9ba421bd6d85726a35728fafaf7e47959de
 DIST genpatches-3.9-1.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
+DIST genpatches-3.9-2.base.tar.xz 60804 SHA256 2de26738706d1a2119472fd9d29a5e93da39125c7ecb900926d3b393e2436fc9 SHA512 73e5c80f06ef361a65cf3c55952910a05d25c300b3a6075759acbbd7cccf1d7c70513ac49cbe79042156ded02abd53b75bbcfa45c37cddcece17edead75cfc8c WHIRLPOOL 1c1c42ee92260305d06bb80a74680f65235aae14b51480a7218604430c39dafcfa83e81b7fbaf2c1743881a9fbb4bb2b270bb4bc80fc89dffaee0d23ad5bd3b0
+DIST genpatches-3.9-2.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
 DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
 DIST linux-3.8.tar.xz 70989468 SHA256 e070d1bdfbded5676a4f374721c63565f1c969466c5a3e214004a136b583184b SHA512 10a7983391af907d8aec72bdb096d1cabd4911985715e9ea13d35ff09095c035db15d4ab08b92eda7c10026cc27348cb9728c212335f7fcdcda7c610856ec30f WHIRLPOOL 0c633854ad9c06df1b1d832aea9bbef76144ba88c8fccf6a3f8729101dc36838bcda6ccd444451cab19177608e7f7866f4f79cff1a8ef2bd0c893933d7f1f44c
 DIST linux-3.9.tar.xz 72104164 SHA256 60bc3e64ee5dc778de2cd7cd7640abf518a4c9d4f31b8ed624e16fad53f54541 SHA512 77fa521f42380409f8ab400c26f7b00e225cb075ef40834bb263325cfdcc3e65aef8511ec2fc2b50bbf4f50e226fb5ab07d7a479aaf09162adbbf318325d0790 WHIRLPOOL 668a8de30c7c3ccf6558cf0f29570f15e37ca7d599d1453afc3cab113d1b05fbd5b32646dd9ed798ceb61405a8754345da0740a53f467b825445028cda4bc698
@@ -50,12 +53,13 @@ EBUILD lh-sources-3.8.7.ebuild 3436 SHA256 8062fa3712fd3dcceb99e3ef47f584a57459a
 EBUILD lh-sources-3.8.8.ebuild 3436 SHA256 8a35a4453727037ceb498fb48328b2787396115fcecf71ff4ee5cb116ba94bbd SHA512 5a1ce3f1634771cec3fe65d98371fc720300d82269705005a8d16531c59205389c9b2f59488cc9c6e89641dfdb624d84fa4adba95767118f06b059834b908193 WHIRLPOOL 0afb085b59ef16830210b0445c16d146af404e6e0c0b6095dbad2c7587a407a3647f7a00cd68e448a252bfc83ab8c1f07e494d1ff0b349333c011dadede2a846
 EBUILD lh-sources-3.9.0-r1.ebuild 3372 SHA256 63bb6e50175f29512693db0150a945f6c498915a7f921a9bceb5f0fddb02140e SHA512 5ddee40bc01098f148f7332def6c687753a4f7d60e91668f38b5f87fa3b7df65ee29e79ae0c51cec0d2a8e7e012e08d02b37ee223a32d0ad39351d153e4e3681 WHIRLPOOL cb039b05f09952a59488fda391438b7befc3f52b8c5836c3bc42ae8ae153418818f8951348d9999b6c29e4ab4ec6df4be536c866e3399fd8d37957d9d6f16077
 EBUILD lh-sources-3.9.0.ebuild 3372 SHA256 a391fcf33b1319efb0c2956f972aa4b30604412724861924e9b237d291adeb86 SHA512 dcf40ace2228c4e30c22ae173b586aa45d22ab536c9f09d6a83f64983427d32cea99e2f3dbff4c5f860ca66eb15ae3bfc36a8fba977fb36d8a2205a7e731bff8 WHIRLPOOL 95c57e0cf1ed9221a3710b5b29bcd8c9169e80fed9acd59c21368c08cc312bb0627eba3e6081d0f54af1bdd896b9b39724752d8205a331ba54d366b687ecac69
-MISC ChangeLog 7586 SHA256 f65d429db8650a8f413dc4824fd4733b3f3137b878040b625d63a23b0655f364 SHA512 3d81d74c5b16e8b0f8f43c3e3ca729ebad756f9c9223f034d503075066ad38b5642cdb1728f8ece8fae6cbe067f9d845e335e802404be13018dfcfd4e9d9fe14 WHIRLPOOL 33c6b6b1cb869ac914702fd5b1bacf864529af576d4cad3d5ddf39cde4ce327f203c64a5cbb0124e9fed3ff0fb71f740ecf680b67cfd6c36d80adf74e15be157
+EBUILD lh-sources-3.9.1.ebuild 3372 SHA256 3e192151a7ed32c50163fc8e4f1486e3a3e4459548bcbd20633e7d1cf487ec6f SHA512 e3a94c6a6c3274590e99c99b2edd4d60173725ea26df6a069c30c692a22c2e14dbeea9623f21afe46989b1879c2c793a9b03f964d61aed8dbd98a080fbdaa02a WHIRLPOOL 9c83cd56a9d9521e9934f1f7e19a6cf1580865d681491b1f865ac74ac64efabf1f0c4e2dee6c5cf8a9e610e7767b9ab60daf475c85472ace442b0d79d2194f4e
+MISC ChangeLog 7715 SHA256 2826f33a1a685afe875c05122c763e7c93e2a716df4d730a4a74bc9fbe50dc3d SHA512 cb7c590156f0ae8ec465e8634acc2cca8279008fc6442cd92db6ce8efde119f53bf2937bb122a3809c4dc90182356be43bd8ec6860212351efb151447a327561 WHIRLPOOL 69107e7e400852b65f21d7f6f5882575eb3daecc19576bfcbe7c53be4fb5ee7ad3a8ebec8b2cbaf8586532da4c361b79dc13728a7f7e64907ff0d4453772a38a
 MISC metadata.xml 621 SHA256 0e6f9ec38a6a9e192a6ab3cf83a409914c821b4dde2c1a15c28d558b6beef8bb SHA512 56744236081b425f4726c26c3b1a8e23297f1b7e4656ff4edbc2e6608a1150fb2e84ed1b58c5ab1318aebdab072392ef9d00160e2c766cc540bb6746bbe24bb3 WHIRLPOOL ed73cba1dee5abce3979c8f41094660b6eb046ef8c4d5820c060b863f54e6fb56a344c49630d8d03d400cba2dc2f4e5a35cd48c4ebdc4e9558511f2e9c9333bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAlGJV30ACgkQgAnW8HDreRZs9wCfYlx+SVLn+3u973KJZWNlfe0h
-fTwAnjGPa87zmSgdjM0A8yWu5Allvnoj
-=HiQE
+iEYEAREKAAYFAlGL+lQACgkQgAnW8HDreRZqcQCfY2CrljX94yYvWWS5MY5UDhwo
+POQAoJjDvM48X6q9zbXx/cW4zZ/3ngSc
+=buPM
 -----END PGP SIGNATURE-----
