@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.9.1 (09 May 2013)
+
+  09 May 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.1.ebuild:
+  Bump to linux-3.9.1
+
 *lh-sources-3.9.0-r1 (07 May 2013)
 
   07 May 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.0-r1.ebuild:
